Use JDK11.